--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Домашняя работа</title>
+    <title></title>
     <link rel="shortcut icon" href="src/logo.ico" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -43,8 +43,8 @@
                 </svg>
             </div>
             <div class="sidebar__user">
-                <div class="sidebar__name">Виталий Ушаков</div>
-                <div class="sidebar__text">Счастливый студент</div>
+                <div class="sidebar__name"></div>
+                <div class="sidebar__text"></div>
             </div>
             <div class="sidebar__tabs">
                 <div class="sidebar__item">
@@ -66,7 +66,7 @@
                                 </clipPath>
                             </defs>
                         </svg>
-                        <span>Домашние задания</span></button>
+                        <span></span></button>
                 </div>
                 <div class="sidebar__item">
                     <button class="sidebar__button" id="diplom">
@@ -81,7 +81,7 @@
                                 </clipPath>
                             </defs>
                         </svg>
-                        <span>Дипломный проект</span></button>
+                        <span></span></button>
                 </div>
             </div>
         </div>
@@ -90,20 +90,20 @@
     <div class="content">
         <div class="container">
             <div class="content__block" id="tasksBlock">
-                <div class="content__title">Домашние задания</div>
+                <div class="content__title"></div>
                 <ul class="content__list">
                     <li class="content__list-item">
-                        <a href="lesson1/index.html">Урок 1</a>
+                        <a href="lesson1/index.html"></a>
                     </li>
                 </ul>
             </div>
             <div class="content__block hidden" id="diplomBlock">
-                <div class="content__title">Дипломный проект</div>
+                <div class="content__title">т</div>
                 <div class="content__list-diplom">
-                    <a href="ПАПКА-С-НОМЕРОМ-УРОКА">Ссылка на ДЗ</a>
+                    <a href="ПАПКА-С-НОМЕРОМ-УРОКА"></a>
                 </div>
                 <div class="content__decor">
-                    <div class="content__decor-text">Давай проверим, чему ты научился!</div>
+                    <div class="content__decor-text"></div>
                     <div class="content__decor-img">
                         <img src="src/decor.png" alt="decor">
                     </div>
@@ -115,3 +115,4 @@
 <script src="src/index.js"></script>
 </body>
 </html>
+
