--- a/index.html
+++ b/index.html
@@ -3,8 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>lkz для Тёмы</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&family=Rubik:wght@500&display=swap"
+          rel="stylesheet">
     <script src="script.js"></script>
 </head>
 <body>
@@ -12,3 +16,4 @@
     <img src="https://99px.ru/sstorage/53/2011/09/tmb_22410_2712.jpg" alt="" srcset="">
 </body>
 </html>
+
