--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>lkz для Тёмы</title>
+    <title>для Тёмы</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -16,4 +16,5 @@
     <img src="https://99px.ru/sstorage/53/2011/09/tmb_22410_2712.jpg" alt="" srcset="">
 </body>
 </html>
+
 
