--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>для Тёмы</title>
+    <link rel="shortcut icon" href="src/logo.ico" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -16,5 +17,6 @@
     <img src="https://99px.ru/sstorage/53/2011/09/tmb_22410_2712.jpg" alt="" srcset="">
 </body>
 </html>
+
 
 
