--- a/урок2/index.html
+++ b/урок2/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Тест">
+    <meta name="keywords" content="любимому">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
 </head>
@@ -14,3 +15,4 @@
 </body>
 
 </html>
+
