--- a/index.html
+++ b/index.html
@@ -5,18 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>для Тёмы</title>
     <link rel="shortcut icon" href="src/logo.ico" type="image/x-icon">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="урок-2/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&family=Rubik:wght@500&display=swap"
           rel="stylesheet">
-    <script src="script.js"></script>
+    <script src="урок-2/script.js"></script>
 </head>
 <body>
     <h2>ТЁМА, Я ТЕБЯ ЛЮБЛЮ!!!</h2>
     <img src="https://99px.ru/sstorage/53/2011/09/tmb_22410_2712.jpg" alt="" srcset="">
 </body>
 </html>
+
 
 
 
