--- a/index.html
+++ b/index.html
@@ -15,8 +15,12 @@
 <body>
     <h2>ТЁМА, Я ТЕБЯ ЛЮБЛЮ!!!</h2>
     <img src="https://99px.ru/sstorage/53/2011/09/tmb_22410_2712.jpg" alt="" srcset="">
+    <link rel="stylesheet" href="style.css">
+    <script src="script.js"></script>
+    <a href="урок-2/index.html">нажми на сердечко</a>
 </body>
 </html>
+
 
 
 
